--- a/client/src/assets/css/signin.css
+++ b/client/src/assets/css/signin.css
@@ -2,19 +2,21 @@
     max-width: 1600px;
 }
 #signIn {
-    background: #222D32;
+    /* background: #EA5C54; */
+    background-image: url(../images/Hinh-nen-iPad-4K.jpg);
     font-family: 'Roboto', sans-serif;
 }
 .login-box {
-    margin-top: 75px;
+    margin-top: 45px;
+    margin-bottom: 45px;
     height: auto;
-    background: #1A2226;
+    background: #ff8f7b;
     text-align: center;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
 .login-key {
-    height: 100px;
+    height: 50px;
     font-size: 80px;
     line-height: 100px;
     background: -webkit-linear-gradient(#27EF9F, #0DB8DE);
@@ -23,48 +25,43 @@
 }
 
 .login-title {
-    margin-top: 15px;
+    margin-top: 0px;
     text-align: center;
-    font-size: 30px;
+    font-size: 40px;
     letter-spacing: 2px;
-    margin-top: 15px;
     font-weight: bold;
     color: #ECF0F5;
 }
 
 .login-form {
-    margin-top: 25px;
+    margin-top: 20px;
     text-align: left;
 }
 
 input[type=text] {
-    background-color: #1A2226;
+    background-color: white;
     border: none;
-    border-bottom: 2px solid #0DB8DE;
     border-top: 0px;
     border-radius: 0px;
     font-weight: bold;
     outline: 0;
     margin-bottom: 20px;
     padding-left: 0px;
-    color: #ECF0F5;
 }
 
 input[type=password] {
-    background-color: #1A2226;
+    background-color: white;
     border: none;
-    border-bottom: 2px solid #0DB8DE;
     border-top: 0px;
     border-radius: 0px;
     font-weight: bold;
     outline: 0;
     padding-left: 0px;
     margin-bottom: 20px;
-    color: #ECF0F5;
 }
 
 .form-group {
-    margin-bottom: 40px;
+    margin-bottom: 30px;
     outline: 0px;
 }
 
@@ -74,8 +71,7 @@ input[type=password] {
     box-shadow: none;
     border-bottom: 2px solid #0DB8DE;
     outline: 0;
-    background-color: #1A2226;
-    color: #ECF0F5;
+    background-color: white;
 }
 
 input:focus {
@@ -88,15 +84,16 @@ label {
 }
 
 .form-control-label {
-    font-size: 10px;
-    color: #6C6C6C;
+    font-size: 12px;
+    color: white;
     font-weight: bold;
     letter-spacing: 1px;
 }
 
 .btn-outline-primary {
-    border-color: #0DB8DE;
-    color: #0DB8DE;
+    border-color: #61d5f0;
+    background-color: #0DB8DE;
+    color: white;
     border-radius: 0px;
     font-weight: bold;
     letter-spacing: 1px;
